--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.0",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "firebase": "^9.23.0",
     "firebase-tools": "^12.4.5",
@@ -18,7 +19,7 @@
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-embed": "^3.6.0",
-    "react-icons": "^4.10.1",
+    "react-icons": "^4.11.0",
     "react-linkify": "^1.0.0-alpha",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
